# Friend_recommendations

./: .env.example  .pre-commit-config.yaml  README.md
app/backend/: Dockerfile  pyproject.toml
app/backend/api/: constants.py  main.py
app/backend/api/models/: handlers.py
app/backend/logic/: recomendation_model.py
app/backend/tests/: tests_api.py
app/frontend/: Dockerfile  app.py  constants.py  pyproject.toml
app/input_file_examples/: main_friends_file.txt  secondary_properties.txt
docker_compose/: app.yaml
